--- a/Algorithm/1. Bisect.ipynb
+++ b/Algorithm/1. Bisect.ipynb
@@ -65,14 +65,24 @@
     "    left, right = 0, len(a) - 1\n",
     "\n",
     "    while left <= right:\n",
+    "        # 取中间的元素 如果偶数则取左边那一个\n",
     "        mid = left + (right - left) // 2\n",
     "        \n",
+    "        # 这里决定了是bisect_left还是bisect_right\n",
     "        if x > a[mid]:\n",
+    "            # 如果 x > a[mid]\n",
+    "            # 则 a[mid]以及其左侧元素都小于x\n",
     "            left = mid + 1\n",
     "        else:\n",
+    "            # 如果 x <= a[mid]\n",
+    "            # 则 a[mid]右侧存在大于x的元素(极端情况右侧全部等于x)\n",
+    "            # 我们不管 找左端点 所以排除 a[mid]以及其右侧元素\n",
     "            right = mid - 1\n",
     "\n",
-    "    return left\n"
+    "    return left  # 输出范围[0, len(a)]\n",
+    "\n",
+    "# 如果都是整数的话\n",
+    "# bisect_left(a, x) == bisect_right(a+1, x)"
    ]
   },
   {
@@ -119,13 +129,6 @@
    "source": [
     "print(bisect(a, x))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
