--- a/LeetCode/3. Shifted Window.ipynb
+++ b/LeetCode/3. Shifted Window.ipynb
@@ -18,7 +18,12 @@
     "    1. m1表示的是从nums1中取元素的个数[0, n1]\n",
     "    2. 我们要找的中位数即左侧最大值[m1-1]\n",
     "    3. 如果m1==0则中位数必在nums2\n",
-    "    4. 如果m1==n1则中位数等于max(nums[- 1], nums[m2-1])\n"
+    "    4. 如果m1==n1则中位数等于max(nums[- 1], nums[m2-1])\n",
+    "6. **循环不变量**\n",
+    "    1. 即L-1永远指向左侧元素而R+1永远指向右侧元素\n",
+    "    2. 最终跳出循环的时候R在L的右侧 \n",
+    "\n",
+    "![循环不变量](../Source/bisect.png)\n"
    ]
   },
   {
@@ -34,20 +39,18 @@
     "        k = (n1+n2+1)//2  # find k-th element\n",
     "\n",
     "        # m1表示的是从nums1中取元素的个数[0, n1]\n",
-    "        left, right = 0, n1\n",
-    "        while left < right:\n",
+    "        left, right = 0, n1-1\n",
+    "        while left <= right:\n",
     "            m1 = left + (right - left) // 2\n",
     "            m2 = k - m1\n",
     "\n",
     "            if nums1[m1] < nums2[m2-1]:\n",
     "                left = m1 + 1\n",
     "            else:\n",
-    "                right = m1\n",
+    "                right = m1 - 1 \n",
     "\n",
     "        m1 = left\n",
     "        m2 = k - m1\n",
-    "        print(m1)\n",
-    "        print(m2)\n",
     "\n",
     "        c1 = max(float('-inf') if m1<=0 else nums1[m1-1], float('-inf') if m2<=0 else nums2[m2-1])\n",
     "        if (n1+n2) & 1: return c1\n",
