--- a/Algorithm/5. UnionFindSet.ipynb
+++ b/Algorithm/5. UnionFindSet.ipynb
@@ -39,11 +39,9 @@
     "# 初始化父节点数组\n",
     "fa = list(range(n))\n",
     "\n",
-    "# 查找函数\n",
-    "def find(x: int) -> int:\n",
-    "    if fa[x] != x:              # 判断是否是根节点\n",
-    "        fa[x] = find(fa[x])     # 路径压缩\n",
-    "    return fa[x]\n",
+    "# 查找函数                      # 路径压缩\n",
+    "def find(x):\n",
+    "    return x if fa[x] == x else find(fa[x])\n",
     "\n",
     "# 合并函数\n",
     "def merge(x: int, y: int):\n",
