--- a/Algorithm/5. UnionFindSet.ipynb
+++ b/Algorithm/5. UnionFindSet.ipynb
@@ -51,41 +51,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Kruskal**  \n",
+    "最小生成树 克鲁斯卡尔算法  \n",
+    "把有权连通图中的节点全都连接起来，**使得连接的权重和最小**  \n",
+    "例：N个城市连接光缆 求光缆的最短连接方案\n",
+    "\n",
+    "1. 边按权排序\n",
+    "2. 依次加入并查集  \n",
+    "    如果已经在集合中说明会成环  \n",
+    "    如果不在集合中 则合并集合  \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Solution:\n",
-    "    def numberOfGoodPaths(self, vals, edges):\n",
-    "        n = len(vals)\n",
-    "        g = [[] for _ in range(n)]\n",
-    "        for x, y in edges:\n",
-    "            g[x].append(y)\n",
-    "            g[y].append(x)  # 建图\n",
+    "\"\"\" 读取数据 建图 \"\"\"\n",
+    "n, m = map(int, input().split())\n",
     "\n",
-    "        # 并查集模板\n",
-    "        fa = list(range(n))\n",
-    "        # size[x] 表示节点值等于 vals[x] 的节点个数，\n",
-    "        # 如果按照节点值从小到大合并，size[x] 也是连通块内的等于最大节点值的节点个数\n",
-    "        size = [1] * n\n",
-    "        def find(x: int) -> int:\n",
-    "            if fa[x] != x:\n",
-    "                fa[x] = find(fa[x])\n",
-    "            return fa[x]\n",
+    "edges = []\n",
+    "for i in range(m):\n",
+    "    x, y, c = map(int, input().split())\n",
+    "    edges.append([x - 1, y - 1, c])\n",
     "\n",
-    "        ans = n  # 单个节点的好路径\n",
-    "        for vx, x in sorted(zip(vals, range(n))):\n",
-    "            fx = find(x)\n",
-    "            for y in g[x]:\n",
-    "                y = find(y)\n",
-    "                if y == fx or vals[y] > vx:\n",
-    "                    continue  # 只考虑最大节点值不超过 vx 的连通块\n",
-    "                if vals[y] == vx:  # 可以构成好路径\n",
-    "                    ans += size[fx] * size[y]  # 乘法原理\n",
-    "                    size[fx] += size[y]  # 统计连通块内节点值等于 vx 的节点个数\n",
-    "                fa[y] = fx  # 把小的节点值合并到大的节点值上\n",
-    "        return ans"
+    "\n",
+    "\"\"\" 并查集模板 \"\"\"\n",
+    "fa = list(range(n))\n",
+    "\n",
+    "\n",
+    "def find(x):\n",
+    "    return x if fa[x] == x else find(fa[x])\n",
+    "\n",
+    "\n",
+    "\"\"\" 按照积分从大到小枚举 \"\"\"\n",
+    "ans = 0\n",
+    "cnt = 1\n",
+    "for x, y, c in sorted(edges, key=lambda x: x[2], reverse=True):\n",
+    "    fx, fy = map(find, (x, y))\n",
+    "    if fx != fy:\n",
+    "        ans += c\n",
+    "        cnt += 1\n",
+    "        fa[fx] = fy\n",
+    "\n",
+    "    if cnt == n:\n",
+    "        print(ans)\n",
+    "        exit()\n",
+    "\n",
+    "print(\"No solution.\")"
    ]
   }
  ],
