--- a/Algorithm/6. Search.ipynb
+++ b/Algorithm/6. Search.ipynb
@@ -4,10 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**深度优先搜索 & 光度优先搜索**  \n",
+    "**图搜索算法**  \n",
+    "1. 深度优先搜索(Depth First Search, DFS)\n",
+    "2. 广度优先搜索(Breadth First Search, BFS)\n",
+    "3. 贪婪最佳优先算法(Greedy Best First Search)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**深度优先搜索 & 广度优先搜索**  \n",
     "适合解决的问题\n",
     "1. 树(无环的)\n",
-    "2. 图的路径\n",
+    "2. 图的路径(需要一个vis数组)\n",
+    "\n",
+    "区别  \n",
+    "1. BFS用于寻找单一的最短路径 找到即是最优解\n",
+    "2. DFS用于寻找所有的解 找到不一定是最优解(所以可以配合动态规划记忆化搜索)\n",
     "\n",
     "我的理解是 这两种搜索只能搜出一条路径 搜索是线性的  \n",
     "对于最小生成树是不行的  \n",
@@ -51,9 +65,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 栈实现的dfs\n",
+    "def dfs(x, y):\n",
+    "    # 流程和bfs的队列一样 先pop再push其它的所有结点\n",
+    "    # 一层搜到底才回退回来搜其它的分支"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# bfs是兵分多路同时开始搜\n",
+    "from collections import deque\n",
     "def bfs(i, vis, g):\n",
-    "    q = deque([i, vis])\n",
+    "    q = deque([[i, vis]])\n",
     "\n",
     "    while q:\n",
     "        i, vis = q.popleft()\n",
@@ -64,6 +91,34 @@
     "            q.append([j, vis])           \n",
     "\n",
     "bfs(0, 0, g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 另一种bfs答案更新的方法 以二维网格为例\n",
+    "from collections import deque\n",
+    "def bfs(x, y):\n",
+    "    q = deque([[x, y, 0]])\n",
+    "    directions = [[0, 1], [1, 0], [0, -1], [-1, 0]]\n",
+    "    while q:\n",
+    "        x, y, t = q.popleft()\n",
+    "        if not isValid(x, y):\n",
+    "            continue\n",
+    "        if t >= ans[x][y]:  # 跳过没有前途的答案\n",
+    "            continue\n",
+    "        for dx, dy in directions:\n",
+    "            q.append([x+dx, y+dy, t+grid[x][y]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**迪迦 dijkstra**"
    ]
   }
  ],
