--- a/Algorithm/1. Bisect.ipynb
+++ b/Algorithm/1. Bisect.ipynb
@@ -129,6 +129,36 @@
    "source": [
     "print(bisect(a, x))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 经典题目 二分两个有序数组的中点\n",
+    "class Solution:\n",
+    "\n",
+    "    def findMedianSortedArrays(self, nums1, nums2) -> float:\n",
+    "        n1, n2 = map(len, (nums1, nums2))\n",
+    "        if n1 > n2: return self.findMedianSortedArrays(nums2, nums1)\n",
+    "        # 奇数的情况 是正中间的数 偶数的情况 是右侧的第一个数\n",
+    "        k = (n1+n2+1) // 2  \n",
+    "\n",
+    "        l, r = 0, n1-1\n",
+    "        while l < r:\n",
+    "            m = l + (r - l) // 2\n",
+    "            if nums1[m] < nums2[k-m-1]:\n",
+    "                l = m + 1\n",
+    "            else:\n",
+    "                r = m\n",
+    "        k1 = l\n",
+    "        k2 = k-l\n",
+    "\n",
+    "        m1 = max()\n",
+    "\n",
+    "        return (nums1[k1] + nums2[k2]) / 2\n"
+   ]
   }
  ],
  "metadata": {
