--- a/Algonew/Graph/图的遍历.ipynb
+++ b/Algonew/Graph/图的遍历.ipynb
@@ -15,7 +15,7 @@
     "一种对**有向无环图**的顶点进行进行线性排序的方法  \n",
     "\n",
     "Kahn法  \n",
-    "1. 创建入度数组 当且仅当入度为0时加入\n",
+    "1. 创建入度数组 上完一门课 后置课程的入度减一  当且仅当入度为0时加入\n",
     "2. 同一时间加入队列的会形成平行路径 我们可以使用 `for _ in range(len(q))` 处理同一时刻的状况\n",
     "3. 按照这样的逻辑 每个节点只会被枚举`一次` 我们只需要在 `popleft()` 之后记录结果即可"
    ]
@@ -157,6 +157,38 @@
     "    ans = max(ans, res)\n",
     "\n",
     "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 并行课程Ⅲ\n",
+    "class Solution:\n",
+    "    def minimumTime(self, n: int, relations, time) -> int:\n",
+    "        indegrees = [0] * n\n",
+    "        g = [[] for i in range(n)]\n",
+    "        for pre, cur in relations:\n",
+    "            pre, cur = map(lambda x:x-1, (pre, cur))\n",
+    "            g[pre].append(cur)\n",
+    "            indegrees[cur] += 1\n",
+    "        \n",
+    "        q = deque([i for i, indegree in enumerate(indegrees) if indegree==0])\n",
+    "\n",
+    "        ans = time.copy()\n",
+    "        while q:\n",
+    "            u = q.popleft()\n",
+    "            for v in g[u]:\n",
+    "                # 枚举的顺序不是实际上先修课完成的时间顺序 \n",
+    "                # 所以需要取最大值 维护每门课程开始的最晚时间\n",
+    "                ans[v] = max(ans[v], ans[u]+time[v])\n",
+    "                indegrees[v] -= 1\n",
+    "                if indegrees[v] == 0:\n",
+    "                    q.append(v)\n",
+    "\n",
+    "        return max(ans)"
    ]
   }
  ],
