--- a/Algonew/Dynamic/数位DP.ipynb
+++ b/Algonew/Dynamic/数位DP.ipynb
@@ -1,16 +1,197 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 数位DP  \n",
+    "当我们需要枚举数字的时候 适合用数位DP  \n",
+    "相当于把一个数字看成一棵树 **相邻的更大数位是父节点**  \n",
+    "我们就可以应用记忆化搜索 从高位遍历到地位 再记忆化返回答案\n",
+    "\n",
+    "灵神数位DP模板\n",
+    "```python\n",
+    "@cache\n",
+    "def f(i: int, mask: int, limit: int, valid: int):\n",
+    "    '''\n",
+    "    i: 当前填到第i位\n",
+    "    mask: 位运算记录当前已经填过的数字\n",
+    "    limit: 前面填的数字是否和n的前几位相同 这决定接下来能填的数字\n",
+    "    valid: 当前数字时候合法 (如果不限制数字使用次数的时候无所谓了)\n",
+    "    '''\n",
+    "    \n",
+    "    if i == len(s):  # 填满了 并且数字合法 返回记数(有时候不需要valid)\n",
+    "        return valid\n",
+    "\n",
+    "    res = 0\n",
+    "    if not valid:    # 如果前面都是0 考虑继续填0\n",
+    "        res = f(i+1, mask, 0, 0)\n",
+    "    \n",
+    "    up = int(s[i]) if limit else 9   # 根据之前填的数字判断下一个数字的范围\n",
+    "    for d in range((1-valid), up+1): # 如果前面填了1 这里就填0 否则 从1开始填\n",
+    "        if mask >> d & 1 == 0:\n",
+    "            # 当且仅当 limit and d == up 才需要继续维持limit人设\n",
+    "            res += f(i+1, mask | 1<<d, limit and d == up, 1)\n",
+    "    return res\n",
+    "\n",
+    "```\n",
+    "\n",
+    "不多废话 我们直接看下面的题目"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 经典题 统计特殊整数\n",
+    "class Solution:\n",
+    "    def countSpecialNumbers(self, n: int) -> int:\n",
+    "\n",
+    "        # 每一位可以填0~9的任意数字 但是由于数字的特性 要做出一些限制\n",
+    "        s = str(n)\n",
+    "\n",
+    "        # 返回从i开始构造数字 能构造的特殊整数的数目\n",
+    "        @cache\n",
+    "        def f(i: int, mask: int, limit: int, valid: int):\n",
+    "            '''\n",
+    "            i: 当前填到第i位\n",
+    "            mask: 位运算记录当前已经填过的数字\n",
+    "            limit: 前面填的数字是否和n的前几位相同 这决定接下来能填的数字\n",
+    "            valid: 当前数字时候合法 因为这题限制了数字使用的次数 为了前面可以一直填0(也就是不填数字) \n",
+    "            '''\n",
+    "            # 填满了 返回isNum\n",
+    "            if i == len(s):\n",
+    "                return valid\n",
+    "\n",
+    "            res = 0\n",
+    "            if not valid:  # 如果前面都是0 考虑继续填0\n",
+    "                res = f(i+1, mask, 0, 0)\n",
+    "\n",
+    "            # 根据之前填的数字判断下一个数字的范围\n",
+    "            up = int(s[i]) if limit else 9\n",
+    "            # 如果前面填了1 这里就填0 否则 从1开始填\n",
+    "            for d in range((1-valid), up+1):\n",
+    "                if mask >> d & 1 == 0:\n",
+    "                    # 秒啊 当且仅当 limit and d == up 才需要继续维持limit人设\n",
+    "                    res += f(i+1, mask | 1<<d, limit and d == up, 1)\n",
+    "            return res\n",
+    "\n",
+    "        return f(0, 0, 1, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def atMostNGivenDigitSet(self, digits, n: int) -> int:\n",
+    "        \n",
+    "        s = str(n)\n",
+    "\n",
+    "        # 这题必须用valid来往前面填0\n",
+    "        @cache\n",
+    "        def f(i, limit, valid):\n",
+    "            if i == len(s):\n",
+    "                return valid\n",
+    "            \n",
+    "            res = 0\n",
+    "            if not valid:\n",
+    "                res += f(i+1, 0, 0)\n",
+    "            \n",
+    "            up = s[i] if limit else '9'\n",
+    "            for d in digits:\n",
+    "                if d > up: break  # 有序\n",
+    "                res += f(i+1, limit and d==up, 1)\n",
+    "\n",
+    "            return res\n",
+    "        \n",
+    "        return f(0, 1, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 8月27日字节跳动第二次笔试 第四题 统计[a, b]之间数位最大值之和\n",
+    "a, b = map(int, input().split())\n",
+    "mod = 10**9 + 7\n",
+    "from functools import cache\n",
+    "\n",
+    "# 可以不用valid 因为这题只关心最大数值\n",
+    "def solve(s):\n",
+    "    s = str(s)\n",
+    "    @cache\n",
+    "    def f(i, value, limit):\n",
+    "        if i == len(s):\n",
+    "            return value\n",
+    "\n",
+    "        res = 0\n",
+    "        up = int(s[i]) if limit else 9\n",
+    "        for d in range(up+1):\n",
+    "            res += f(i+1, max(d, value), limit and d==up)\n",
+    "\n",
+    "        return res\n",
+    "    \n",
+    "    return f(0, 0, 1);\n",
+    "\n",
+    "print((solve(b)-solve(a-1)) % mod)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025\n"
+     ]
+    }
+   ],
+   "source": [
+    "mod = int(1e9 + 7)\n",
+    "\n",
+    "def cal(b):\n",
+    "    a = 10\n",
+    "    res = (45 * b) % mod  # 45 = 1 + 2 + 3 + ... + 9\n",
+    "    b -= 1\n",
+    "    while b: # 快速幂\n",
+    "        if b & 1:\n",
+    "            res = (res * a) % mod\n",
+    "        a = (a * a) % mod\n",
+    "        b >>= 1\n",
+    "    return res\n",
+    "\n",
+    "n = int(input())\n",
+    "print(cal(n // 2) * cal((n + 1) // 2) % mod)\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
