--- a/Algonew/Tree/二叉树.ipynb
+++ b/Algonew/Tree/二叉树.ipynb
@@ -102,7 +102,77 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class TreeNode:\n",
+    "    def __init__(self, val=0, left=None, right=None):\n",
+    "        self.val = val\n",
+    "        self.left = left\n",
+    "        self.right = right"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 最近公共祖先\n",
+    "236. 二叉树的最近公共祖先\n",
+    "235. 二叉搜索树的最近公共祖先\n",
+    "1123. 最深叶节点的最近公共祖先 (865. 具有所有最深节点的最小子树)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def lowestCommonAncestor(self, root: 'TreeNode', p: 'TreeNode', q: 'TreeNode') -> 'TreeNode':\n",
+    "        if root in (None, p, q):\n",
+    "            return root\n",
+    "        left = self.lowestCommonAncestor(root.left, p, q)\n",
+    "        right = self.lowestCommonAncestor(root.right, p, q)\n",
+    "        if left and right:\n",
+    "            return root\n",
+    "        return left if left else right"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def lowestCommonAncestor(self, root: 'TreeNode', p: 'TreeNode', q: 'TreeNode') -> 'TreeNode':\n",
+    "        if root.val > p.val and root.val > q.val:\n",
+    "            return self.lowestCommonAncestor(root.left, p, q)\n",
+    "        elif root.val < p.val and root.val < q.val:\n",
+    "            return self.lowestCommonAncestor(root.right, p, q)\n",
+    "        else:\n",
+    "            return root"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def subtreeWithAllDeepest(self, root: TreeNode) -> TreeNode:\n",
+    "        \n",
+    "        def dfs(root: TreeNode):\n",
+    "            if not root: return 0, None\n",
+    "\n",
+    "            l_depth, left = dfs(root.left)\n",
+    "            r_depth, right = dfs(root.right)\n",
+    "            if l_depth > r_depth: return l_depth + 1, left\n",
+    "            elif l_depth < r_depth: return r_depth + 1, right\n",
+    "            else: return l_depth + 1, root\n",
+    "\n",
+    "        return dfs(root)[1]"
+   ]
   }
  ],
  "metadata": {
