--- a/Pytorch/DL/注意力.ipynb
+++ b/Pytorch/DL/注意力.ipynb
@@ -120,7 +120,7 @@
     "\n",
     "        attn = torch.bmm(q, k.transpose(2, 3))  # [bacth, heads, n_q, n_k]\n",
     "        attn = F.softmax(attn / np.sqrt(d_k), dim=-1)\n",
-    "        output = torch.bmm(attn, v).transpose(1, 2).reshape(batch, n_v, -1)\n",
+    "        output = torch.bmm(attn, V).transpose(1, 2).reshape(batch, n_v, -1)\n",
     "        output = self.fc(output)\n",
     "\n",
     "        return self.ln(output + residual)"
